--- a/content/get_involved/donations.html
+++ b/content/get_involved/donations.html
@@ -45,10 +45,26 @@ tags:
 <div class="hidden donate row text-center" id="donationApp">
   <div class="col-md-8 col-md-offset-2 well" id="donation-central" style="padding: 19px 0px;">
     <div class="row">
-      <div class="col-xs-1 col-xs-offset-2 active stage click" id="tx-one">1</div>
-      <div class="col-xs-1 col-xs-offset-2 stage click" id="tx-two">2</div>
-      <div class="col-xs-1 col-xs-offset-2 stage click" id="tx-three">3</div>
-      <div class="col-xs-1 col-xs-offset-2 stage" id="tx-four">4</div>
+      <div class="col-xs-1 col-xs-offset-1 click">
+        <div id="tx-one" class="active stage">
+          1
+        </div>
+      </div>
+      <div class="col-xs-1 col-xs-offset-1 col-sm-offset-2 click">
+        <div id="tx-two" class="stage">
+          2
+        </div>
+      </div>
+      <div class="col-xs-1 col-xs-offset-1 col-sm-offset-2 click">
+        <div id="tx-three" class="stage">
+          3
+        </div>
+      </div>
+      <div class="col-xs-1 col-xs-offset-1 col-sm-offset-2">
+        <div id="tx-four" class="stage">
+          4
+        </div>
+      </div>
       <div class="col-xs-12 amount">0</div>
     </div>
 
@@ -90,17 +106,19 @@ tags:
 
           <h3> Select an amount to donate. </h3>
           <div class="row">
-            <button class="col-md-3 hidden-xs hidden-sm btn btn-default btn-lg" type="submit" value="10">
-              $10
-            </button>
-            <button class="col-md-3 col-xs-6 btn btn-default btn-lg" type="submit" value="25">
-              $25
-            </button>
-            <button class="col-md-3 col-xs-6 btn btn-default btn-lg" type="submit" value="50">
+            <button class="col-md-3 hidden-xs hidden-sm btn btn-default btn-lg" type="submit" value="50">
               $50
             </button>
-            <button class="col-md-3 hidden-xs hidden-sm btn btn-default btn-lg" type="submit" value="100">
+            <button class="col-md-3 col-xs-6 btn btn-default btn-lg"
+              type="submit" value="75">
+              $75
+            </button>
+            <button class="col-md-3 col-xs-6 btn btn-default btn-lg"
+              type="submit" value="100">
               $100
+            </button>
+            <button class="col-md-3 hidden-xs hidden-sm btn btn-default btn-lg" type="submit" value="150">
+              $150
             </button>
             <button class="col-md-3 col-xs-6 btn btn-default btn-lg" type="submit" value="250">
               $250
@@ -118,6 +136,7 @@ tags:
               </span>
             </div>
           </div>
+          <button class="btn btn-default" type="submit" style="width: 90%; align-content: center;">Next</button>
         </fieldset>
       </form>
       <h3>Cost of common patient care procedures</h3>
